fixed misaligned delete-cross

--- a/src/scss/todos/_todo-checker.scss
+++ b/src/scss/todos/_todo-checker.scss
@@ -91,6 +91,8 @@
     height: 33px;
     width: 2px;
     background-color: #333;
+    top: 0;
+    right: 15px;
   }
 
   &::before {
